# auto-scanner

./: .env.example  .gitignore  AGENTS.md  BITBROWSER_API_FIX.md  BITBROWSER_INTEGRATION.md  BITBROWSER_SETUP.md  Cargo.toml  EMAIL_MONITOR_PLAN.md  README.md  REFACTORING_PLAN.md  REFACTORING_ROUND2_SUMMARY.md  REFACTORING_ROUND4_SUMMARY.md  REFACTORING_ROUND5_PLAN.md  auto-scanner.db  proxies.csv.example  test_accounts.csv  todo.md
.github/workflows/: ci.yml  release.yml
conductor/: product-guidelines.md  product.md  tech-stack.md  tracks.md
conductor/tracks/browser_adapter_refactor_20260114/: metadata.json  plan.md  spec.md
conductor/tracks/infrastructure_setup_20260113/: metadata.json  plan.md  spec.md
docs/: AGENT_BROWSER_GUIDE.md  BITBROWSER_GUIDE.md  CHANGELOG.md  CROSS_PLATFORM.md  GITHUB_ACTIONS.md  PROXY_POOL_GUIDE.md
docs/refactoring/: README.md  round1_summary.md  round3_summary.md  round4_plan.md  round5_summary.md  round6_plan.md  round6_summary.md
migrations/: 001_create_accounts_table.sql
scripts/: start.sh  status.sh  stop.sh  test.sh
src/: adspower.rs  cli.rs  csv_reader.rs  database.rs  email_monitor.rs  email_sender.rs  excel_handler.rs  file_tracker.rs  lib.rs  main.rs  master.rs  models.rs  processor.rs  worker.rs
src/browser/: mod.rs  playwright_adapter.rs
src/config/: logging.rs  mod.rs
src/core/: cli.rs  config.rs  error.rs  mod.rs  models.rs  time.rs
src/infrastructure/: adspower.rs  bitbrowser.rs  browser_manager.rs  daemon.rs  imap.rs  logging.rs  mod.rs  process.rs  proxy_pool.rs
src/infrastructure/adspower/: fingerprint.rs  types.rs
src/infrastructure/bitbrowser/: fingerprint.rs  types.rs
src/infrastructure/browser/: agent_browser_adapter.rs  mock_adapter.rs  mod.rs  playwright_adapter.rs
src/services/: file_policy.rs  master.rs  mod.rs  processor.rs
src/services/email/: attachment.rs  config.rs  imap_service.rs  mod.rs  monitor.rs  monitor.rs.backup  notification.rs  parser.rs  processor.rs  tracker.rs
src/services/file/: csv_reader.rs  excel_handler.rs  mod.rs  operation.rs
src/services/master/: mod.rs  registration_loop.rs  scheduler.rs  server.rs  watcher.rs
src/services/worker/: coordinator.rs  factory.rs  mod.rs  orchestrator.rs  output_parser.rs  (+4 more)
src/strategies/: facebook.rs  facebook_mobile.rs  mod.rs
tests/: bitbrowser_integration_test.rs  integration_test.rs  outlook_register_test.rs
(+9 files in other folders)
