[package]
name = "auto-scanner"
version = "0.1.0"
edition = "2021"

[dependencies]
clap = { version = "4.5", features = ["derive"] }
tokio = { version = "1.42", features = ["full"] }
tracing = "0.1"
tracing-subscriber = { version = "0.3", features = ["env-filter"] }
anyhow = "1.0"
csv = "1.3"
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"
sqlx = { version = "0.8", features = ["runtime-tokio", "sqlite"] }
async-trait = "0.1.89"
thiserror = "2.0.17"
playwright = "0.0.20"

[dev-dependencies]
tempfile = "3.15"

[lib]
name = "auto_scanner"
path = "src/lib.rs"
