[package]
name = "auto-scanner"
version = "0.1.0"
edition = "2021"

[dependencies]
clap = { version = "4.5", features = ["derive"] }
tokio = { version = "1.42", features = ["full"] }
tracing = "0.1"
tracing-subscriber = { version = "0.3", features = ["env-filter"] }
anyhow = "1.0"
csv = "1.3"
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"
async-trait = "0.1.89"
thiserror = "2.0.17"
playwright = "0.0.20"
notify = "8.2.0"
chrono = "0.4.42"
reqwest = { version = "0.11.27", features = ["json"] }
async-channel = "2.5.0"
tracing-appender = "0.2.4"
nix = { version = "0.30.1", features = ["signal"] }
daemonize = "0.5.0"
calamine = "0.32.0"
rust_xlsxwriter = "0.92.3"
lettre = { version = "0.11.19", features = ["tokio1", "smtp-transport", "tokio1-native-tls", "builder"] }
mail-parser = "0.11.1"
mime = "0.3.17"
mime_guess = "2.0.5"
base64 = "0.22.1"
dotenv = "0.15.0"
native-tls = "0.2.14"
async-imap = { version = "0.11.1", features = ["runtime-tokio"], default-features = false }
tokio-native-tls = "0.3.1"
futures = "0.3.31"
rand = "0.9.2"

[dev-dependencies]
tempfile = "3.15"

[lib]
name = "auto_scanner"
path = "src/lib.rs"
